Mac FF needed yet more adjustment for the lines to wrap correctly on event pages. Setting the line-height to normal makes things better (though, oddly, so did using non-italics), but this change should now be enough to fix #172, I think.

--- a/libsite7b/css/style.css
+++ b/libsite7b/css/style.css
@@ -2064,6 +2064,7 @@ section.pane .workshop-orientation-link {margin-top: .6em;}
 }
 .field-name-field-event-date .date-display-single, .field-name-field-event-date .date-display-start, .field-name-field-event-date .date-display-end {
   margin: 0;
+  line-height: normal;
 }
 
 
